# yoink

./: Cargo.toml  README.md
.github/workflows/: release.yaml  rust.yaml
rules/: bash.yaml  bash_history.yaml  mft.yaml  notepad.yaml  usnjrnl_j.yaml
src/: bin.rs  lib.rs
src/collection/: collecter.rs  reader_windows.rs  rules.rs  sector_reader.rs  windows_reader.rs
src/collection/file/: collecter.rs  ntfs_reader.rs
src/collection/memory/: collecter.rs
src/collection/readers/: ntfs_reader.rs
