[package]
name = "yoink"
version = "0.1.0"
edition = "2021"

[lib]
name = "yoink"
path = "src/lib.rs"

[[bin]]
name = "yoink-cli"
path = "src/bin.rs"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
rust-embed = "8.5.0"
glob = "0.3.1"
chrono = "0.4.38"
zip = { version="2.2.0", features=["chrono", "aes-crypto"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = {version = "0.52", features = ["Win32_Storage_FileSystem"]}