[package]
name = "yoink"
version = "0.0.3"
edition = "2021"

[lib]
name = "yoink"
path = "src/lib.rs"

[[bin]]
name = "yoink-cli"
path = "src/bin.rs"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
rust-embed = "8.5.0"
glob = "0.3.1"
chrono = "0.4.38"
zip = { version="2.2.0", features=["chrono", "aes-crypto"] }
minidump-writer = "0.10.1"
crash-context = "0.6.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = {version = "0.52", features = ["Win32_Storage_FileSystem", "Win32_System", "Win32_System_ProcessStatus", "Win32_Foundation", "Win32_System_Threading"]}
ntfs = "0.4.0"
nt-time = "0.10.3"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1